concord_examples/tests/ui/rate_limit_unknown_key.stderr
error: unknown rate_limit key `region`
  --> tests/ui/rate_limit_unknown_key.rs:13:31
   |
13 |             bucket method by [region, endpoint] { // ERROR: unknown key
   |                               ^^^^^^
